# aioslsk

./: .coveragerc  .gitignore  .readthedocs.yaml  MESSAGES.rst  README.rst  SOULSEEK.rst  bitbucket-pipelines.yml  connection.py  events.py  exceptions.py  filemanager.py  listeners.py  logger.yaml  main.py  messages.py  model.py  network_manager.py  obfuscation.py  peer.py  pyproject.toml  scheduler.py  search.py  server_manager.py  settings.yaml  slsk.py  state.py  transfer.py  upnp.py  utils.py
.github/: dependabot.yml
.github/workflows/: pipeline.yml  release.yml
decoding/: net_info_msg.txt  peer_init_response.txt  peer_search_reply.txt  search_query.txt
docs/: requirements.txt
docs/diagrams/: transfer_states.puml
docs/source/: API.rst  DESIGN.rst  MESSAGES.rst  MESSAGES_GEN.rst  SETTINGS.rst  SOULSEEK.rst  USAGE.rst  conf.py  index.rst
docs/source/_exts/: message_generator.py
docs/source/deprecated/: MESSAGES.rst  _MESSAGES.rst
src/aioslsk/: __init__.py  base_manager.py  client.py  commands.py  configuration.py  constants.py  distributed.py  events.py  exceptions.py  log_utils.py  model.py  naming.py  peer.py  search.py  server.py  server_manager.py  session.py  settings.py  shares.py  slsk.py  social.py  state.py  tasks.py  transfer.py  utils.py
src/aioslsk/interest/: manager.py
src/aioslsk/network/: __init__.py  connection.py  network.py  rate_limiter.py  reader.py  upnp.py
src/aioslsk/protocol/: messages.py  obfuscation.py  primitives.py
src/aioslsk/resources/: default_logger.yaml  default_settings.json  default_settings.yaml
src/aioslsk/room/: manager.py  model.py
src/aioslsk/search/: manager.py  model.py
src/aioslsk/shares/: __init__.py  cache.py  manager.py  model.py  utils.py
src/aioslsk/transfer/: __init__.py  cache.py  interface.py  manager.py  model.py  state.py  task.py
src/aioslsk/user/: __init__.py  manager.py  model.py
src/pyslsk/: commands.py  configuration.py  connection.py  constants.py  events.py  exceptions.py  filemanager.py  listeners.py  logger.yaml  loop.py  messages.py  model.py  naming.py  network.py  network_manager.py  obfuscation.py  peer.py  scheduler.py  search.py  server_manager.py  settings.py  shares.py  slsk.py  state.py  transfer.py  upnp.py  utils.py
src/pyslsk/network/: connection.py  network.py  rate_limiter.py  upnp.py
src/pyslsk/protocol/: messages.py  obfuscation.py  primitives.py
src/pyslsk/resources/: default_settings.yaml
src/resources/: default_settings.yaml
tests/component/: _test_component_transfer.py  test_component_network.py  test_component_peer.py
tests/e2e/: fixtures.py  mock_server.py  test_e2e_client.py  test_e2e_distributed.py  test_e2e_network.py  test_e2e_peer.py  test_e2e_search.py  test_e2e_server.py  test_e2e_transfer.py  utils.py
tests/e2e/mock/: constants.py  distributed.py  messages.py  model.py  peer.py  server.py
tests/unit/: test_configuration.py  test_connection.py  test_distributed.py  test_events.py  test_filemanager.py  test_log_utils.py  test_messages_create.py  test_model.py  test_naming.py  test_network.py  test_peer.py  test_scheduler.py  test_server_manager.py  test_settings.py  test_shares.py  test_state.py  test_tasks.py  test_transfer.py  test_utils.py
tests/unit/network/: test_connection.py  test_network.py  test_rate_limiter.py
tests/unit/protocol/: test_messages.py  test_obfuscation.py  test_primitives.py
tests/unit/resources/data/: shares_index.bak  shares_index.dir  transfers.bak  transfers.dir
tests/unit/room/: test_room_manager.py  test_room_model.py
tests/unit/search/: test_search_manager.py
tests/unit/shares/: test_shares_cache.py  test_shares_manager.py
tests/unit/transfer/: test_transfer_cache.py  test_transfer_manager.py  test_transfer_model.py  test_transfer_state.py
tests/unit/user/: test_user_manager.py  test_user_model.py
tools/debug/: debug_mode.py
tools/debug/config/: log_filter_search.json  log_full.json
