[tool.poetry]
name = "aioslsk"
version = "v1.6.2"
description = "Asyncio based SoulSeek client"
authors = ["JurgenR <1249228+JurgenR@users.noreply.github.com>"]
repository = "https://github.com/JurgenR/aioslsk/"
documentation = "https://readthedocs.org/projects/aioslsk/"
readme = "README.rst"
license = "GPL-3.0-or-later"
packages = [{include = "aioslsk", from = "src"}]
keywords = ["soulseek", "p2p", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: File Sharing"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
mutagen = "^1.47.0"
aiofiles = ">=22.1,<26.0"
async-upnp-client = ">=0.33,<0.47"
types-aiofiles = ">=23.2,<26.0"
pydantic-settings = "^2.4.0"
async-timeout = ">=4.0.3,<6.0.0"
typing-extensions = "^4.12.2"
multidict = "^6.0.5"
pydantic = "^2.12.0"

[tool.poetry.group.dev.dependencies]
flake8 = { version = ">=6,<8", python = ">=3.10,<3.15" }
mypy = "^1.11.2"
no-implicit-optional = "^1.4"
pytest = ">=7.4.2,<10.0.0"
pytest-cov = ">=4.1,<8.0"
pytest-unordered = ">=0.5.2,<0.8.0"
pytest-asyncio = ">=0.21.1,<1.4.0"
sphinx = ">=7,<9"
sphinx-rtd-theme = ">=2,<4"
autodoc-pydantic = { version = "^2.2.0", python = ">=3.10,<3.15" }

[tool.poetry.group.tools]
optional = true

[tool.poetry.group.tools.dependencies]
pyshark = "^0.6"
pyyaml = "^6.0.1"
yappi = "^1.4.0"

[tool.pytest.ini_options]
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
